--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-# MONGODB_URI="mongodb://localhost:27017"
-MONGODB_URI="mongodb+srv://alinawaz:alinawaz1977@cluster0.bwybwh7.mongodb.net"
+MONGODB_URI="mongodb://localhost:27017"
+# MONGODB_URI="mongodb+srv://alinawaz:alinawaz1977@cluster0.bwybwh7.mongodb.net"
 ADMIN_EMAIL="ali@gmail.com"
 ADMIN_PASSWORD="1977"
 SECRET="ALI"
